# views-frames

./: .gitignore  CHANGELOG.md  CLAUDE.md  GOVERNANCE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  notebooks.yml  publish_package.yml
critiqus/: critique_00.md  critique_01.md  critique_02.md  critique_03.md
docs/: INSTANTIATION_CHECKLIST.md
docs/ADRs/: 000_use_of_adrs.md  001_ontology_of_the_repository.md  002_topology_and_dependency_rules.md  003_authority_of_declarations_over_inference.md  004_rules_for_evaluation_and_stability.md  005_testing_as_mandatory_critical_infrastructure.md  006_intent_contracts_for_non_trivial_classes.md  007_silicon_based_agents_as_untrusted_contributors.md  008_observability_and_explicit_failure.md  009_boundary_contracts_and_configuration_validation.md  010_technical_risk_register.md  011_twin_unification_option_c.md  012_sample_axis_convention.md  013_metadata_and_identifier_model.md  014_cross_level_alignment_boundary.md  015_spatiallevel_relocation.md  016_conformance_floor_and_ownership.md  017_summarization_is_a_sibling_package.md  018_api_freeze_v1.md  019_coherent_posterior_summary_hdi_tower.md  020_metricframe_contract_home.md  021_exceedance_probability_estimator.md  022_worst_case_expected_shortfall.md  023_reconciliation_is_a_sibling_package.md  024_principled_joint_reconciliation_design.md  025_value_buffer_immutability_by_convention.md  README.md
docs/CICs/: FeatureFrame.md  PredictionFrame.md  Protocols.md  README.md  Reconcile.md  SpatioTemporalIndex.md  Summarize.md  TargetFrame.md
docs/contributor_protocols/: carbon_based_agents.md  silicon_based_agents.md
docs/guides/: publishing-to-pypi.md  reconciliation_migration_and_cutover_runbook.md
docs/standards/: logging_and_observability_standard.md  physical_architecture_standard.md
examples/: cross_level.py  quickstart.py
notebooks/: 01_frames.ipynb  02_summaries.ipynb  03_reconciliation.ipynb  README.md  _synthetic.py
perspectives/: from_views-appwrite_perspective.md  from_views-datafactory_perspective.md  from_views-faoapi_perspective.md  from_views-pipeline-core_perspective.md  from_views-reporting_perspective.md
perspectives/round00/: from_views-datafactory_perspective.md
perspectives/round01/: SYNTHESIS.md  views-appwrite_review.md  views-datafactory_review.md  views-faoapi_review.md  views-pipeline-core_review.md  views-postprocessing_review.md  views-reporting_review.md
perspectives/round02/: SYNTHESIS.md  views-appwrite_review.md  views-faoapi_review.md  views-pipeline-core_review.md  views-postprocessing_review.md  views-reporting_review.md
reports/: technical_risk_register.md
reports/postmortems/: 2026-06_reconciliation_cutover_epic11.md  2026-06_tower_estimator_c44_c45.md  2026-06_views_frames_leaf.md  2026-06_views_frames_reconcile.md  2026-06_views_frames_summarize.md
research/: coherent_posterior_summary_note.md
research/map_hdi/: NOTE.md  audit.py  audit_tower.py  autoresearch.yaml  density_sweep.py  estimator.py  point_pass.py  program.md  run_eval.py  timing.py
research/map_hdi/benchmark/: baselines.py  battery.py  metric.py
scripts/: gen_reconciliation_e2e_fixture.py  gen_reconciliation_parity_fixture.py  verify_reconcile_parity.py
src/views_frames/: __init__.py  _serialize.py  _typing.py  _validation.py  feature_frame.py  index.py  metadata.py  prediction_frame.py  protocols.py  spatial_level.py  target_frame.py
src/views_frames/conformance/: __init__.py
src/views_frames/io/: __init__.py  arrow.py  npz.py
src/views_frames_reconcile/: __init__.py  conformance.py  frames.py  grouping.py  module.py  proportional.py  result.py  validation.py
src/views_frames_summarize/: __init__.py  _common.py  aggregate.py  bimodality.py  collapse.py  config.py  conformance.py  exceedance.py  expected_shortfall.py  interval.py  point.py  summarize_tower.py  tower.py  tower_point.py
tests/: test_conformance.py  test_construction_red.py  test_falsification_domain_free_crosslevel.py  test_falsification_immutability_copy.py  test_falsification_spatiallevel_and_metricframe.py  test_falsification_twin_parity.py  test_frame_parity.py  test_frames.py  test_import_enforcement.py  test_index.py  test_io.py  test_packaging.py  test_properties.py  test_proxy_adapter.py  test_reconcile_conformance.py  test_reconcile_head_to_head.py  test_reconciliation_e2e_parity.py  test_reconciliation_frames.py  test_reconciliation_grouping.py  test_reconciliation_module.py  test_reconciliation_parity.py  test_reconciliation_scale.py  test_reconciliation_validation.py  test_select.py  test_summarize_aggregate.py  test_summarize_collapse.py  test_summarize_config.py  test_summarize_conformance.py  test_summarize_estimators.py  test_summarize_exceedance.py  test_summarize_expected_shortfall.py  test_summarize_scale.py  test_summarize_tower.py  test_value_object_and_laws.py
tests/fixtures/: reconciliation_e2e_parity.npz  reconciliation_parity.npz
