[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "views-frames"
version = "1.0.0"
description = "The VIEWS platform data-contract layer: immutable array+identifier frames (numpy only, root of the dependency DAG)."
authors = [
    { name = "Simon Polichinel von der Maase", email = "simmaa@prio.org" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=1.26,<3",
]

[project.urls]
Homepage = "https://github.com/views-platform/views-frames"
Repository = "https://github.com/views-platform/views-frames"
Changelog = "https://github.com/views-platform/views-frames/blob/main/CHANGELOG.md"

# Optional serialization extra — pyarrow is allowed ONLY behind io/ (README §3.1).
[project.optional-dependencies]
arrow = ["pyarrow>=14,<20"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    # pyarrow is the consumer-facing [arrow] extra; installed in dev so CI
    # exercises io/arrow. It must never be imported outside src/views_frames/io/.
    "pyarrow>=14,<20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/views_frames", "src/views_frames_summarize"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The falsification stubs assert against the README via long, literal regexes
# whose lines cannot wrap without changing their semantics.
"tests/test_falsification_*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
