[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "views-frames"
version = "1.7.0"
description = "The VIEWS platform data-contract layer: immutable array+identifier frames (numpy only, root of the dependency DAG)."
authors = [
    { name = "Simon Polichinel von der Maase", email = "simmaa@prio.org" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
# License is declared via the SPDX `license` expression above (PEP 639); the deprecated
# `License ::` classifier is intentionally omitted to avoid the expression/classifier clash.
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26,<3",
]

[project.urls]
Homepage = "https://github.com/views-platform/views-frames"
Repository = "https://github.com/views-platform/views-frames"
Changelog = "https://github.com/views-platform/views-frames/blob/main/CHANGELOG.md"

# Optional serialization extra — pyarrow is allowed ONLY behind io/ (README §3.1).
[project.optional-dependencies]
arrow = ["pyarrow>=14,<20"]
# Optional docs/notebooks extra — plotting + jupyter for the showcase notebooks
# (notebooks/, an un-gated dev artifact outside src/). NEVER runtime dependencies;
# self-references [arrow] so `uv sync --extra docs` also enables the parquet round-trip
# demo in notebooks/01_frames.ipynb. matplotlib/scipy are notebook-only (the core is
# numpy-only); these are imported by notebooks, never by the package.
docs = [
    "views-frames[arrow]",
    "matplotlib>=3.8,<4",
    "scipy>=1.11,<2",
    "jupyterlab>=4,<5",
    # nbmake drives the non-blocking notebook-execution CI check (issue #151): it just
    # runs the notebooks end-to-end to catch frozen-API drift. A test tool, but it rides
    # in [docs] so the single `uv sync --extra docs` provisions everything the notebooks
    # job needs (kernel + plotting + the checker).
    "nbmake>=1.5,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
    # pyarrow is the consumer-facing [arrow] extra; installed in dev so CI
    # exercises io/arrow. It must never be imported outside src/views_frames/io/.
    "pyarrow>=14,<20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/views_frames", "src/views_frames_summarize", "src/views_frames_reconcile"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# Coverage: the leaf is critical infrastructure (ADR-005) — CI enforces 100%
# line coverage (`uv run pytest --cov --cov-fail-under=100`). Genuinely
# unreachable defensive lines must carry an explicit `# pragma: no cover`.
[tool.coverage.run]
source = ["src"]
# Branch coverage on: the `--cov-fail-under=100` gate enforces line AND branch
# coverage, so a conditional with an untested outcome fails CI (register C-36).
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"
# research/ is the volatile estimator lab and notebooks/ holds the un-gated showcase
# notebooks + their helper (notebooks/_synthetic.py) — both sit outside the frozen,
# gated src/ and are not held to the leaf's lint/format bar.
extend-exclude = ["research", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The falsification stubs assert against the README via long, literal regexes
# whose lines cannot wrap without changing their semantics.
"tests/test_falsification_*.py" = ["E501"]
# The reconciliation parity tests are faithfully relocated from views-postprocessing
# (Epic 11 / ADR-023); their dense numpy/dict-comprehension assertions are kept verbatim
# rather than re-wrapped.
"tests/test_reconciliation_*.py" = ["E501"]
# The dev/ops scripts (oracle regeneration; the reconciliation parity verifier) are not
# CI-run and carry dense numpy one-liners + report f-strings; not held to the wrap bar.
"scripts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
